--- a/ProyectoIntegrador/pom.xml
+++ b/ProyectoIntegrador/pom.xml
@@ -49,6 +49,17 @@
   </dependencies>
 
   <build>
+
+    <resources>
+      <resource>
+        <directory>${project.basedir}</directory><!-- from -->
+        <targetPath>${project.build.directory}</targetPath><!-- to -->
+        <includes><!-- what -->
+          <include>DB/*.db</include>
+        </includes>
+      </resource>
+    </resources>
+
     <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
       <plugins>
         <!-- clean lifecycle, see https://maven.apache.org/ref/current/maven-core/lifecycles.html#clean_Lifecycle -->
